Make recurring events aware of daylight saving time.

The time of the first occurrence was being used for all occurrences,
which is wrong. For example, a recurring UTC event that crosses a
DST switch won't have all occurrences with at same local time.

BUG: 194978